# libjpeg

./: build.gradle
src/androidTest/java/com/libjpeg/: ExampleInstrumentedTest.kt
src/main/cpp/: CMakeLists.txt  compress.c  compress.h
src/main/java/com/libjpeg/: LibjpegUtil.kt
src/test/java/com/libjpeg/: ExampleUnitTest.kt
